assets/css/main.css
/*hover color #ef7c69*/
/*secondary button color #474d55*/
/*secondaray hover #535a63*/

h1, h2, h3, h4, a, button {
 font-family: 'Montserrat', sans-serif;;
}

p, li {
  font-family: 'Cousine', monospace;
}

td {
  padding-right: 40px;
}

/*NAV*/
.navbar-wrapper {
  position: absolute;
  top: 0; right: 0; left: 0;
  z-index: 20
}

.navbar-wrapper > .container {
  padding-right: 0;
  padding-left: 0;
}

.navbar-wrapper .navbar {
  padding-right: 15px;
  padding-left: 15px;
}

.navbar-wrapper .navbar .container {
  width: auto;
}

nav.navbar.navbar-inverse {
  /*background-color: #272d35;*/
  border: none;
  padding-left: 0;
}

/*.navbar-nav > li > a, .navbar-brand {
    padding-top:20px !important; padding-bottom:0 !important;
    height: 80px;
}

.navbar {min-height:30px !important;}*/


.navbar-inverse .navbar-brand {
  color: black;
}

.container-fluid.nav-container {
  padding-left: 0;
}

.navbar-header {
  background-color: #e27563;
  padding-left: 15px;
}

h2.brand {
  margin-top: 0;
}

/*WRAPPERS*/
.container {
  /*margin-bottom: 60px;*/
}

.header {
  margin-top: 60px;
  margin-bottom: 60px;
  border-top: 4px solid #407C8D;
  text-align: center;
}

.header > h1 {
  margin-bottom: 20px;
}

.header > i {
  line-height: 0;
  font-size: 75px;
  color: #e27563;
}

.inner {
  display: inline-block;
}

.inner-header, .inner-header-border {
  padding: 0 0 15px 0;
  /*background-color: #e27563;*/
  margin-bottom: 15px;
}

.inner-header-border {
  border-bottom: 2px solid #407C8D;
}

.inner-header h2, h3 {
  margin: 0 0 0 0;
}

.table-header h4 {
  margin-top: 0;
}

.inner-header > h3{
  color: black;
}

/*BANNER*/
.banner {
  position: relative;
  height: 400px;
  margin-bottom: 60px;
}

.banner > img {
  width: 100%;
  height: 400px;
}

.overlay {
  background-color: rgba(0, 0, 0, 0.6);
  position: absolute;
  min-height: 100%;
  z-index: 1;
  top: 0; right: 0; left: 0; bottom: 0;
}

.overlay-content {
  margin-top: 15%;
  text-align: center;
}

.overlay-content > h1, h3 {
  color: white;
}

/*BADGES*/

#badges-inner h3{
  color: black;
}

#badges-inner > div {
  /*height: 300px;*/
  border-right: 1px solid black;
  padding-top: -20px;
  padding-bottom: -20px;
  margin-bottom: 15px;
  text-align: center;
}

#badges-inner > div:nth-child(3) {
  border: none;
}

#badges-inner > div:last-child {
  border: none;
}

#badges-inner img {
  height: 100px;
  margin-bottom: -15px;
}

#badges-inner i {
  font-size: 90px;
}


.call button.btn.btn-primary {
  position: relative;
  font-size: 18px;
  padding: 26px 42px 26px 42px;
  border: none;
  border-radius: 0;
  background-color: #e27563;
}

/*ABOUT US*/
.row#about-row {
  margin-bottom: 50px;
}

.col-inner#about-left {
  margin-right: 50px;
}

.col-inner#contact {
  text-align: right;
  border-radius: 5px;
  padding-left: 20px;
}

.col-inner#contact p {
  font-size: 18px;
}

.col-inner#phone-email {
  margin-top: 60px;
}

img.logo {
  height: 50px;
}


/*PRINTING*/

.container-fluid#printing-container {
  background-color: #FFDFBF;
}

.row#printing-row {

  margin-bottom: 30px;
}

.row#printing-row h3 {
  color: black;
}

.row#printing-row .col-inner {
  /*background-color: #EFEFEF;*/
  /*border: 1px solid black;*/
  /*border-radius: 5px;*/
  margin-right: auto;
  padding-top: 0;
  /*height: 300px;*/
  overflow: hidden;
}

.col-inner#image {
  border: 2px solid black;
  border-radius: 2px;
}
.col-inner#image > img {
  max-height: 300px;
}


/*FOOTER*/

.container-fluid.footer {
  background-color: #272d35;
}

.footer-content {
  color: white;
}

.footer .row {
  margin-top: 50px;
  height: 300px;
}

.brand img {
  height: 50px;
}

.brand .col-inner {
  text-align: right;
}

.address .col-inner{

}

.contact .col-inner {
  margin-top: 10px;
}

